fix：更新 ESLint 配置，移除不必要的 Prettier 相關依賴，並調整 npm 腳本以支持開發環境。重構多個檔案以移除 .js 擴展名，並優化測試案例以使用 AxiosResponse 類型。更新 news 模組的相關導入，確保一致性。

--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "license": "UNLICENSED",
     "scripts": {
         "build": "nest build && tsc-alias -p tsconfig.build.json",
-        "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-        "start": "nest start",
-        "start:dev": "node -r tsconfig-paths/register -r source-map-support/register dist/main.js",
+        "format": "echo 'Prettier removed'",
+        "start": "node dist/main",
+        "dev:watch": "nodemon --watch dist --exec \"node dist/main\"",
+        "build:watch": "nest build --watch",
+        "start:dev": "concurrently -n build,serve -c yellow,cyan \"pnpm:build:watch\" \"pnpm:dev:watch\"",
         "start:debug": "nest start --debug --watch",
         "start:prod": "node dist/main",
         "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -40,12 +42,11 @@
         "@types/jest": "^30.0.0",
         "@types/node": "^22.10.7",
         "@types/supertest": "^6.0.2",
+        "concurrently": "^9.2.1",
         "eslint": "^9.18.0",
-        "eslint-config-prettier": "^10.0.1",
-        "eslint-plugin-prettier": "^5.2.2",
         "globals": "^16.0.0",
         "jest": "^30.0.0",
-        "prettier": "^3.4.2",
+        "nodemon": "^3.1.10",
         "source-map-support": "^0.5.21",
         "supertest": "^7.0.0",
         "ts-jest": "^29.2.5",
