chore: 更新 ESLint 配置，關閉多個規則以減少報錯；調整 npm 腳本以簡化構建和啟動流程；新增文章內容的模型定義，並在 news 模組中實作獲取文章內容的功能；移除不必要的 tsconfig 路徑映射，並修正多個檔案的導入路徑以確保一致性。

--- a/package.json
+++ b/package.json
@@ -6,19 +6,19 @@
     "private": true,
     "license": "UNLICENSED",
     "scripts": {
-        "build": "nest build && tsc-alias -p tsconfig.build.json",
+        "build": "nest build",
         "format": "echo 'Prettier removed'",
         "start": "node dist/main",
         "dev:watch": "nodemon --watch dist --exec \"node dist/main\"",
         "build:watch": "nest build --watch",
-        "start:dev": "concurrently -n build,serve -c yellow,cyan \"pnpm:build:watch\" \"pnpm:dev:watch\"",
+        "start:dev": "nest start --watch",
         "start:debug": "nest start --debug --watch",
         "start:prod": "node dist/main",
         "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
         "test": "jest",
         "test:watch": "jest --watch",
         "test:cov": "jest --coverage",
-        "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
+        "test:debug": "node --inspect-brk -r ts-node/register node_modules/.bin/jest --runInBand",
         "test:e2e": "jest --config ./test/jest-e2e.json"
     },
     "dependencies": {
@@ -28,6 +28,7 @@
         "@nestjs/core": "^11.0.1",
         "@nestjs/platform-express": "^11.0.1",
         "axios": "^1.12.2",
+        "cheerio": "^1.1.2",
         "fast-xml-parser": "^5.2.5",
         "reflect-metadata": "^0.2.2",
         "rxjs": "^7.8.1"
@@ -52,8 +53,7 @@
         "ts-jest": "^29.2.5",
         "ts-loader": "^9.5.2",
         "ts-node": "^10.9.2",
-        "tsc-alias": "^1.8.16",
-        "tsconfig-paths": "^4.2.0",
+
         "typescript": "^5.7.3",
         "typescript-eslint": "^8.20.0"
     },
@@ -68,11 +68,7 @@
         "transform": {
             "^.+\\.(t|j)s$": "ts-jest"
         },
-        "moduleNameMapper": {
-            "^(\\.\\.?/.*)\\.js$": "$1",
-            "^@/(.*)\\.js$": "<rootDir>/$1",
-            "^@/(.*)$": "<rootDir>/$1"
-        },
+
         "collectCoverageFrom": [
             "**/*.(t|j)s"
         ],
